--- a/week-02/convertMyMoney/package.json
+++ b/week-02/convertMyMoney/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "convertMyMoney",
+  "name": "convert-my-money",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
+  },
   "dependencies": {
+    "axios": "^0.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2"
+  },
+  "jest": {
+    "collectCoverage": true
   }
 }
