--- a/week-12/package.json
+++ b/week-12/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "mocha --report spec tests/**.test.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
