--- a/week-12/package.json
+++ b/week-12/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --report spec tests/**.test.js"
+    "test": "mocha --reporter spec tests/**.test.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
