--- a/module-26-AWS-express/s3-express/package.json
+++ b/module-26-AWS-express/s3-express/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.662.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.3",
-    "s3": "^4.4.0"
+    "s3": "^4.4.0",
+    "sequelize": "^5.21.7"
   }
 }
