--- a/module-26-AWS-express/s3-express/package.json
+++ b/module-26-AWS-express/s3-express/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "aws-sdk": "^2.662.0",
     "dotenv": "^8.2.0",
